@@ -1,0 +1,22 @@
+"<INDEX>" (
+        " Hello there!",
+        " Im $b$S$b, your handy WebTV helper service.",
+        "$b$b",
+        " With this service you can use common IRC",
+        " commands that are not directly available via",
+        " your WebTV.",
+        "=---------------------------------------=",
+        "  $bNICK$b    - Change your nickname.",
+        "  $bWHOIS$b   - Get information on another user.",
+        "$b$b",
+        " See $b/msg $S help <command>$b for syntax",
+        " and usage for a command");
+
+"COMMANDS" "${index}";
+
+"NICK" ("/msg $S NICK <new nick>",
+       "Changes your nickname to a new one of your choice (as long as its not in use and it is valid).");
+
+"WHOIS" ("/msg $S WHOIS <nickname>",
+       "Retrieves information on the user you specify.");
+
